entry box made a little bigger to avoid cutting off descenders

--- a/public/stylesheets/sass/new_activity_page.scss
+++ b/public/stylesheets/sass/new_activity_page.scss
@@ -98,7 +98,7 @@ img {
 
         input[type="text"] {
           width: 349px;
-          height: 14px;
+          height: 17px;
           margin-left: 5px;
           padding: 10px 95px 10px 10px;
 
@@ -108,7 +108,7 @@ img {
         input[type="image"] {
           position: absolute;
           z-index: +10;
-          top: 65px;
+          top: 66px;
           left: 455px;
         }
       }
